--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
+    "querystring": "^0.2.1",
     "sequelize": "^6.37.5"
   }
 }
