--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ dbDialect=postgres
 Port=8800
 PAYSTACK_SECRET_KEY=sk_test_4f0c923420eab72c69c922c848cf2606646566af
 PAYSTACK_BASE_URL=https://api.paystack.co
+OwnerphoneNumber=08089828929
